# lakepulse

./: .databricksignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  app.yaml  config.py  databricks.yml  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_metrics_table.py  0002_wiki_events_table.py  0003_add_processed_at.py
app/: requirements.txt
app/backend/: db.py  main.py  models.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.css  App.tsx  api.ts  index.css  metricDescriptions.ts
app/frontend/src/components/: BiggestEditsPanel.tsx  BotHumanPanel.tsx  CounterCard.tsx  Dashboard.tsx  EditTypePanel.tsx  EventRow.tsx  EventTimeline.tsx  Header.tsx  InlineChart.tsx  LatencyChart.tsx  LatencyPipeline.tsx  LiveFeed.tsx  MetricCard.tsx  MetricChart.tsx  PipelineHealthPanel.tsx  SearchPanel.tsx  ThroughputBar.tsx  TopWikisPanel.tsx
app/frontend/src/hooks/: useEventStream.ts
collector/: lakebase_writer.py  main.py  metrics.py  wiki_stream.py  zerobus_client.py
sql/: setup.sql
streaming/: init_lakebase_table.py  stream_to_lakebase.py
