[project]
name = "lakepulse"
version = "0.1.0"
description = "Real-time Mac hardware metrics streamed through Databricks"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.0",
    "databricks-sdk>=0.30",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
collector = [
    "databricks-zerobus-ingest-sdk>=0.1",
]

[project.scripts]
lakepulse-collect = "collector.main:main"
